[package]
name = "fft_sound_convolution"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple library implementing sound convolution using RustFFT"
repository = "https://github.com/Bill13579/fft_sound_convolution"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slice-ring-buffer = ["dep:slice-ring-buffer"]

[dependencies]
num-complex = "0.4.3"
num-traits = "0.2.15"
rustfft = "6.1.0"
slice-ring-buffer = { version = "0.3.2", optional = true }
